--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,10 @@
   "author": "Biwash",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-
     "jsonwebtoken": "^9.0.0",
-
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20"
