--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "uuid": "^9.0.1"
   }
